--- a/BayesBinMix_models_latest.qmd
+++ b/BayesBinMix_models_latest.qmd
@@ -28,7 +28,7 @@ library(gmodels)
 ```{r}
 #Load census data and results from latest model
 censusdata_bin <- readRDS("./censusdata_bin_raceeth_033024.rds")
-#censusdata<- load("./censusdata_updated.RData")
+censusdata<- load("./censusdata_updated_newvars.RData")
 agedist<-load("./census_age_dist.RData")
 names(censusdata_bin) <- c("acs5_2010_bin","acs5_2015_bin","acs5_2019_bin")
 
@@ -37,14 +37,13 @@ res_all<-readRDS("./tuningheatsvec_4.14.24.rds")
 #It seems that heating vector with deltaT = 0.01 worked well for all datasets-- swap acceptance rates ranged from 54-56.8%
 #deltaT2: 22.2%, 25.7%, 22.7
 
-res_acs10<-res_all[[1]][["res_acs10_deltatemp2"]]
-res_acs15<-res_all[[1]][["res_acs15_deltatemp2"]]
-res_acs19<-res_all[[1]][["res_acs19_deltatemp2"]]
+res_acs10<-res_all[[1]][["res_acs10_deltatemp1"]]
+res_acs15<-res_all[[1]][["res_acs15_deltatemp1"]]
+res_acs19<-res_all[[1]][["res_acs19_deltatemp1"]]
 ```
 
 ```{r}
-#| eval = false
-
+#|eval: false
 #These results look much better!
 print(res_acs10)
 print(res_acs15)
@@ -53,7 +52,132 @@ print(res_acs19)
 
 ### **Plots** and Patterns for ACS 2006-2010
 
+#### **Cluster mixing weights estimates**
+
 ```{r}
+mapK<-Mode(res_acs10$K.mcmc)[1]  #tells you mapK
+#Class probabilities
+stats<-cbind(summary(res_acs10$parameters.ecr.mcmc)$statistics[,c(1,2)], 
+             summary(res_acs10$parameters.ecr.mcmc)$quantiles[,c(1,5)])
+
+tail(round(stats, 4), mapK) %>% kable()
+
+check<-as.matrix(res_acs10$parameters.ecr.mcmc)
+wts<-check[,163:171]
+colMeans(wts)
+apply(wts, 2, sd) 
+apply(wts, 2, quantile, probs = c(0.025, 0.975))
+```
+
+```{r}
+#Find index of highest probability
+highest_index<-function(vec){
+  s<-length(vec)
+  vec1<-order(vec)
+ return(vec1[s])
+}
+
+#Find second highest probability and index
+second_highest<-function(vec){
+  vec1<-sort(vec, decreasing = T)
+ return(vec1[2])
+}
+second_highest_index<-function(vec){
+  s<-length(vec)
+  vec1<-order(vec)
+ return(vec1[s-1])
+}
+```
+
+#### Explore cluster assignment based on ECR algorithm + Distribution of census variables across clusters
+
+```{r}
+#For ACS 2010 and mapK = 9
+mapK<-Mode(res_acs10$K.mcmc)[1]  #tells you mapK
+classificationprobs_10<-res_acs10$classificationProbabilities.ecr
+ClusterAssignment<-res_acs10$clusterMembershipPerMethod[,2]
+# Add cluster classification based on maximum probability 
+maxProb<-apply(classificationprobs_10, 1, max)
+ClusterAssignment_ecr_temp<-apply(classificationprobs_10,1, highest_index)
+
+
+classificationprobs_10$ClusterAssignment<-ClusterAssignment
+classificationprobs_10$maxProb<-maxProb
+classificationprobs_10$ClusterAssignment_ecr_temp<-ClusterAssignment_ecr_temp
+
+#9 census tracts that are not classified based on highest prob
+table(classificationprobs_10$ClusterAssignment,classificationprobs_10$ClusterAssignment_ecr_temp)
+
+classificationprobs_10 %>% filter(ClusterAssignment_ecr_temp != ClusterAssignment)
+##This is odd-- these algorithms assign observations to clusters probabilistically based on the highest posterior probabilities of cluster assignments given the observed data
+##--> SOLVED: it seems like a rounding issue because it makes the correct assignment when none of the probabilities have similar/same leading number.
+
+table(classificationprobs_10$ClusterAssignment)
+table(classificationprobs_10$ClusterAssignment_ecr_temp)
+
+classificationprobs_10$GEOID<-row.names(censusdata_bin$acs5_2010_bin)
+
+#**Since the distribution is not much different, we can re-assign these 9 census tracts to the cluster they belong based on the highest probability-- all other classificiations match perfectly, and so we will keep variable ClusterAssignment_ecr_temp.
+#Also make a note of these "fuzzy" census tracts- to see if same across survey waves
+fuzzygeoids_10<-classificationprobs_10 %>% filter(ClusterAssignment_ecr_temp != ClusterAssignment) %>% select(GEOID)
+
+
+#Prep Data
+classificationprobs_10$ClusterAssignment_final<- factor(classificationprobs_10$ClusterAssignment_ecr_temp, levels = 1:9, labels = paste0("cluster", 1:9, sep= " "))
+
+dat10_clusters<- classificationprobs_10 %>% select(GEOID,ClusterAssignment_final, maxProb)
+
+
+
+###########################################################################################
+#Distribution of other demographic census variables across clusters to help with profiles
+###########################################################################################
+#merge age dist + race dist with cluster information-- these are proportions
+merged10<- merge(dat10_clusters, agedist10_wide, by = "GEOID")
+
+table1::table1(~  age_median + age_20_24 + age_25_34 + age_35_44 + age_45_54 + age_55_59 + age_60_64 + age_65_74 + age_75_84 + age_85_more |ClusterAssignment_final, data= merged10, overall = F)
+
+#Distrubution of original NSES variables (not binarized) by cluster
+acs10<-acs5_2010_wide1 <- acs5_2010_wide  %>% select( !c( "Femalehousehold_2010_E","SNAP_2010_E","Two_or_more_rooms_2010_E", paste0("ms", 1:8), "ms10", "ms_to", paste0("wc", 1:14), "wc_to","pov_to", paste0("pov", 2:5), "white_collar_occupation_2010", "HouseIncBlowPovLineP_2010", "Lessthan2rooms_2010_E",  "Two_or_more_rooms_2010_P", "Total_occhousing_2010", "NH_some_other_race_2010", "NH_two_or_more_races_2010",  "NonHispanicWhite_2010" , "minoritystatus_2010"))
+acs10$ClusterAssignment<-merged10$ClusterAssignment_final
+
+acs10bin<-censusdata_bin$acs5_2010_bin
+acs10bin$GEOID <- rownames(acs10bin)
+acs10bin<- acs10bin %>% mutate_if(is.numeric, as.factor)
+acs10bin$ClusterAssignment<-classificationprobs_10$ClusterAssignment_final
+#acs15bin$ClusterAssignment<- factor(acs15bin$ClusterAssignment, levels = 1:9, labels = paste0("cluster", 1:9, sep= " "))
+
+
+table1(~ Lackplumbing_2010 + medianincome_2010 + BachelorHigherP_2010  +  Education9years_2010 +  Femalehousehold_2010_P + HighSchoolHigherP_2010 + No_vehicle_2010 + OwnerOccupiedUnitP_2010 + RenterOccupiedUnitP_2010 + UnemployementP_2010 + working_class_2010 + SNAP_2010_P +  Hispanic_or_Latino_2010 + NonHispanicBlack_2010 + NonHispanicAsian_2010 + pov_2010 + Crowding_housing_2010 + lang_home_EN_notwell_2010|ClusterAssignment, data= acs10, overall = F)
+
+
+```
+
+#### Distribution of assignment probabilities to the most probable cluster
+
+```{r}
+boxplot10<- merged10 %>%  ggplot(aes(x = ClusterAssignment_final, y = maxProb, fill = ClusterAssignment_final)) +
+  geom_boxplot() +
+  labs(fill = "Cluster Assignment", 
+       y = "Assignment Probability after ECR algorithm", 
+       x= "")
+boxplot10
+dattable<- merged10 %>% rename(`Average Assignment Probability (ECR Algorithm)` = maxProb,
+                    `Cluster Assignment` = ClusterAssignment_final) 
+
+table1::table1(~`Average Assignment Probability (ECR Algorithm)` |`Cluster Assignment`, data= dattable, overall = F)
+
+```
+
+#### Generate bar plots
+
+```{r}
+#| layout-ncol: 1
+#| fig-width: 10
+#| fig-height: 10
+#| fig-cap: 
+#|   - "Individual Neighborhood SES variables"
+#|   -  "Neighborhood  SES variables Domains"
 #Import functions from plots.R
 source("plots.R")
 #source("/Users/carmenrodriguez/Desktop/Research Projects/BayesBinMix/ecbayesbinmix/plots.R")
@@ -75,17 +199,7 @@ group_cols<-c("#1f77b4","#2ca02c","salmon1", "#bcbd22", "#e377c2")
 
 # Generate 14 pastel colors for ungrouped graph
 pastel_palette1 <- generate_pastel_colors(18)
-```
 
-```{r}
-#| layout-ncol: 1
-#| fig-width: 10
-#| fig-height: 10
-#| fig-cap: 
-#|   - "Individual Neighborhood SES variables"
-#|   -  "Neighborhood  SES variables Domains"
-#Kmax = 50
-mapK<-Mode(res_acs10$K.mcmc)[1]  #tells you mapK
 
 #fig_title = paste("Success Probabilities when mapK=", mapK, sep="")
 fig_title = ""
@@ -105,108 +219,104 @@ p_10_heatmap2<- plot_thetakj_heatmap_r(prob_est_long = dat_10, fig_title)
 #p_10_indiv
 p_10_group
 p_10_heatmap
+p_10_heatmap2
+
+pdf("/Users/carmenrodriguez/Desktop/Research Projects/BayesBinMix/ecbayesbinmix/Figures/barplot10_18vars.pdf", width = 10, height = 20)
+p_10_group
+dev.off()
+
+png("/Users/carmenrodriguez/Desktop/Research Projects/BayesBinMix/ecbayesbinmix/Figures/barplot10_18vars.png", width = 780, height = 900)
+ p_10_group
+dev.off()
 
 ```
+
+### **Plots** and Patterns for ACS 2011-2015
 
 #### **Cluster mixing weights estimates**
 
 ```{r}
+mapK<-Mode(res_acs15$K.mcmc)[1]
 #Class probabilities
-stats<-cbind(summary(res_acs10$parameters.ecr.mcmc)$statistics[,c(1,2)], 
-             summary(res_acs10$parameters.ecr.mcmc)$quantiles[,c(1,5)])
+stats<-cbind(summary(res_acs15$parameters.ecr.mcmc)$statistics[,c(1,2)], summary(res_acs15$parameters.ecr.mcmc)$quantiles[,c(1,5)])
 
-tail(round(stats, 4), mapK) %>% kable()
-```
-
-```{r}
-#Find index of highest probability
-highest_index<-function(vec){
-  s<-length(vec)
-  vec1<-order(vec)
- return(vec1[s])
-}
-
-#Find second highest probability
-second_highest<-function(vec){
-  vec1<-sort(vec, decreasing = T)
- return(vec1[2])
-}
-second_highest_index<-function(vec){
-  s<-length(vec)
-  vec1<-order(vec)
- return(vec1[s-1])
-}
+tail(round(stats,4), mapK) %>% kable()
+#check clusters 6, 7 and 9
 ```
 
 #### Age and Race/Ethnicity Distribution of the census tracts by cluster assignment
 
 ```{r}
-#For ACS 2010 and mapK = 9
-mapK<-Mode(res_acs10$K.mcmc)[1]  #tells you mapK
-classificationprobs_10<-res_acs10$classificationProbabilities.ecr
-ClusterAssignment<-res_acs10$clusterMembershipPerMethod[,2]
+#For ACS 2015 and mapK = 9
+classificationprobs_15<-res_acs15$classificationProbabilities.ecr
 # Add cluster classification based on maximum probability 
-maxProb<-apply(classificationprobs_10, 1, max)
-ClusterAssignment_ecr_temp<-apply(classificationprobs_10,1, highest_index)
+maxProb<-apply(classificationprobs_15, 1, max)
+ClusterAssignment_ecr_temp<-apply(classificationprobs_15,1, highest_index)
+table(ClusterAssignment_ecr_temp)
+
+classificationprobs_15$ClusterAssignment<-res_acs15$clusterMembershipPerMethod[,2]
+classificationprobs_15$ClusterAssignment_ecr_temp<-ClusterAssignment_ecr_temp
+classificationprobs_15$maxProb<-maxProb
 
 
-classificationprobs_10$ClusterAssignment<-ClusterAssignment
-classificationprobs_10$maxProb<-maxProb
-classificationprobs_10$ClusterAssignment_ecr_temp<-ClusterAssignment_ecr_temp
+#Prep Data 
+table(classificationprobs_15$ClusterAssignment_ecr_temp, classificationprobs_15$ClusterAssignment)
 
-#12 census tracts that are not classified based on highest prob
-table(classificationprobs_10$ClusterAssignment,classificationprobs_10$ClusterAssignment_ecr_temp)
+classificationprobs_15%>% filter(ClusterAssignment != ClusterAssignment_ecr_temp) 
+#only 6 CTs
 
-classificationprobs_10 %>% filter(ClusterAssignment_ecr_temp == ClusterAssignment)
-##This is odd-- my understanding is that these algorithms assigned observations to clusters probabilistically based on the highest posterior probabilities of cluster assignments given the observed data-- it seems like a rounding issue because it makes the correct assignment when none of the probabilities have similar/same leading number.
-
-#Prep Data
-classificationprobs_10$GEOID<-row.names(censusdata_bin$acs5_2010_bin)
-
-####Find census tracts that are missclassified
-fuzzygeoids_10<-classificationprobs_10 %>% filter(ClusterAssignment_ecr_temp != ClusterAssignment) %>% select(GEOID)
+classificationprobs_15$GEOID<-row.names(censusdata_bin$acs5_2015_bin)
+#only 6 CTs
+fuzzygeoids_15<-classificationprobs_15%>% filter(ClusterAssignment_ecr_temp != ClusterAssignment) %>% select(GEOID)
 
 
-classificationprobs_10$ClusterAssignment<- factor(classificationprobs_10$ClusterAssignment, levels = 1:9, labels = paste0("cluster", 1:9, sep= " "))
+#Same as above we using clusterassignment_ecr_temp
+classificationprobs_15$ClusterAssignment_final<- factor(classificationprobs_15$ClusterAssignment_ecr_temp, levels = 1:9, labels = paste0("cluster", 1:9, sep= " "))
 
-dat10_clusters<- classificationprobs_10 %>% select(GEOID,ClusterAssignment, maxProb)
 
-#merge age dist + race dist with cluster information-- these are proportions
-merged10<- merge(dat10_clusters, agedist10_wide, by = "GEOID")
+dat15_clusters<- classificationprobs_15 %>% select(GEOID,ClusterAssignment_final, maxProb)
+table(dat15_clusters$ClusterAssignment_final)
 
-table1::table1(~  age_median + age_20_24 + age_25_34 + age_35_44 + age_45_54 + age_55_59 + age_60_64 + age_65_74 + age_75_84 + age_85_more |ClusterAssignment, data= merged10, overall = F)
+
+###########################################################################################
+#Distribution of other demographic census variables across clusters to help with profiles
+###########################################################################################
+merged15<- merge(dat15_clusters, agedist15_wide, by = "GEOID")
+table1::table1(~  age_median + age_20_24 + age_25_34 + age_35_44 + age_45_54 + age_55_59 + age_60_64 + age_65_74 + age_75_84 + age_85_more |ClusterAssignment_final, data= merged15, overall = F)
+
+acs15<- acs5_2015_wide  %>% select( !c( "Femalehousehold_2015_E","SNAP_2015_E","Two_or_more_rooms_2015_E", paste0("ms", 1:8), "ms10", "ms_to", paste0("wc", 1:14), "wc_to",
+"pov_to", paste0("pov", 2:5), "white_collar_occupation_2015", "HouseIncBlowPovLineP_2015", "Lessthan2rooms_2015_E", "Two_or_more_rooms_2015_P", "Total_occhousing_2015",     "NH_some_other_race_2015","NH_two_or_more_races_2015",  "NonHispanicWhite_2015" ,  "minoritystatus_2015"))
+acs15$ClusterAssignment<-merged15$ClusterAssignment_final
 
 #Distrubution of SES variables by cluster
-acs10bin<-censusdata_bin$acs5_2010_bin
-acs10bin$GEOID <- rownames(acs10bin)
-acs10bin<- acs10bin %>% mutate_if(is.numeric, as.factor)
-acs10bin$ClusterAssignment<-ClusterAssignment
-acs10bin$ClusterAssignment<- factor(acs10bin$ClusterAssignment, levels = 1:9, labels = paste0("cluster", 1:9, sep= " "))
+acs15bin<-censusdata_bin$acs5_2015_bin
+acs15bin$GEOID <- rownames(acs15bin)
+acs15bin<- acs15bin %>% mutate_if(is.numeric, as.factor)
+acs15bin$ClusterAssignment<-classificationprobs_15$ClusterAssignment_final
 
-
-table1(~ Lackplumbing_2010 + medianincome_2010 + BachelorHigherP_2010  +  Education9years_2010 +  Femalehousehold_2010_P + HighSchoolHigherP_2010 + No_vehicle_2010 + OwnerOccupiedUnitP_2010 + RenterOccupiedUnitP_2010 + UnemployementP_2010 + working_class_2010 + SNAP_2010_P +  Hispanic_or_Latino_2010 + NonHispanicBlack_2010 + NonHispanicAsian_2010 + pov_2010 + Crowding_housing_2010 + lang_home_EN_notwell_2010|ClusterAssignment, data= acs10bin, overall = F)
-
-###COMBINE INTO A SINGLE DATASET LATER
+table1(~ Lackplumbing_2015 + medianincome_2015 + BachelorHigherP_2015  +  Education9years_2015 +  Femalehousehold_2015_P + HighSchoolHigherP_2015 + No_vehicle_2015 + OwnerOccupiedUnitP_2015 + RenterOccupiedUnitP_2015 + UnemployementP_2015 + working_class_2015 + SNAP_2015_P +  Hispanic_or_Latino_2015 + NonHispanicBlack_2015 + NonHispanicAsian_2015 + pov_2015 + Crowding_housing_2015 + lang_home_EN_notwell_2015|ClusterAssignment, data= acs15, overall = F)
 
 ```
 
 #### Distribution of assignment probabilities to the most probable cluster
 
 ```{r}
-boxplot10<- merged10 %>%  ggplot(aes(x = ClusterAssignment, y = maxProb, fill = ClusterAssignment)) +
+boxplot15<-merged15 %>% ggplot(aes(x = ClusterAssignment_final, y = maxProb, 
+                                   fill = ClusterAssignment_final)) +
   geom_boxplot() +
-  labs(fill = "Cluster Assignment", 
-       y = "Assignment Probability after ECR algorithm", 
+  labs(fill = "Cluster Assignment",
+       y = "Assignment Probability after ECR algorithm",
        x= "")
-boxplot10
-dattable<- merged10 %>% rename(`Average Assignment Probability (ECR Algorithm)` = maxProb,
-                    `Cluster Assignment` = ClusterAssignment) 
 
-table1::table1(~`Average Assignment Probability (ECR Algorithm)` |`Cluster Assignment`, data= dattable, overall = F)
+dattable15<-merged15 %>% rename(`Average Assignment Probability (ECR Algorithm)` = maxProb,
+                    `Cluster Assignment` = ClusterAssignment_final) 
+
+table1::table1(~`Average Assignment Probability (ECR Algorithm)` |`Cluster Assignment`, 
+               data= dattable15, overall = F)
 
 ```
 
-### **Plots** and Patterns for ACS 2011-2015
+#### Generate bar plots
 
 ```{r}
 #| layout-ncol: 1
@@ -224,122 +334,28 @@ p_15_indiv<-plot_thetakj_indiv(prob_est_long = dat_15, mapK,color_palette = past
 p_15_group<-plot_thetakj_group(prob_est_long = dat_15, mapK,color_palette = group_cols, fig_title)
 p_15_heatmap<- plot_thetakj_heatmap(prob_est_long = dat_15, fig_title)
 p_15_heatmap1<- plot_thetakj_heatmap_r(prob_est_long = dat_15, fig_title)
-#p_15_indiv
+#Remove cluter 7 from the plot-->
 p_15_group
 p_15_heatmap
 p_15_heatmap1
-```
 
-#### **Cluster mixing weights estimates**
-
-```{r}
-#Class probabilities
-stats<-cbind(summary(res_acs15$parameters.ecr.mcmc)$statistics[,c(1,2)], summary(res_acs15$parameters.ecr.mcmc)$quantiles[,c(1,5)])
-
-tail(round(stats,4), mapK) %>% kable()
-#check clusters 6, 7 and 9
-```
-
-#### Age and Race/Ethnicity Distribution of the census tracts by cluster assignment
-
-```{r}
-#For ACS 2015 and mapK = 9
-classificationprobs_15<-res_acs15$classificationProbabilities.ecr
-# Add cluster classification based on maximum probability 
-maxProb<-apply(classificationprobs_15, 1, max)
-ClusterAssignment_ecr_temp<-apply(classificationprobs_15,1, highest_index)
+pdf("/Users/carmenrodriguez/Desktop/Research Projects/BayesBinMix/ecbayesbinmix/Figures/barplot15_18vars.pdf", width = 10, height = 20)
+p_15_group
+dev.off()
 
 
-classificationprobs_15$ClusterAssignment<-res_acs15$clusterMembershipPerMethod[,2]
-classificationprobs_15$ClusterAssignment_ecr_temp<-ClusterAssignment_ecr_temp
-classificationprobs_15$maxProb<-maxProb
-
-
-#Prep Data 
-table(classificationprobs_15$ClusterAssignment_ecr_temp, classificationprobs_15$ClusterAssignment)
-
-classificationprobs_15%>% filter(ClusterAssignment != ClusterAssignment_ecr_temp) 
-#only 6 CTs
-
-classificationprobs_15$GEOID<-row.names(censusdata_bin$acs5_2015_bin)
-#only 6 CTs
-fuzzygeoids_15<-classificationprobs_15%>% filter(ClusterAssignment_ecr_temp != ClusterAssignment) %>% select(GEOID)
-
-classificationprobs_15$ClusterAssignment<- factor(classificationprobs_15$ClusterAssignment, levels = 1:9, labels = paste0("cluster", 1:9, sep= " "))
-
-
-dat15_clusters<- classificationprobs_15 %>% select(GEOID,ClusterAssignment, maxProb)
-
-
-#merge age dist + race dist with cluster information-- these are proportions
-merged15<- merge(dat15_clusters, agedist15_wide, by = "GEOID")
-table1::table1(~  age_median + age_20_24 + age_25_34 + age_35_44 + age_45_54 + age_55_59 + age_60_64 + age_65_74 + age_75_84 + age_85_more |ClusterAssignment, data= merged15, overall = F)
-
-
-#Distrubution of SES variables by cluster
-acs15bin<-censusdata_bin$acs5_2015_bin
-acs15bin$GEOID <- rownames(acs15bin)
-acs15bin<- acs15bin %>% mutate_if(is.numeric, as.factor)
-acs15bin$ClusterAssignment<-classificationprobs_15$ClusterAssignment
-#acs15bin$ClusterAssignment<- factor(acs15bin$ClusterAssignment, levels = 1:9, labels = paste0("cluster", 1:9, sep= " "))
-
-
-table1(~ Lackplumbing_2015 + medianincome_2015 + BachelorHigherP_2015  +  Education9years_2015 +  Femalehousehold_2015_P + HighSchoolHigherP_2015 + No_vehicle_2015 + OwnerOccupiedUnitP_2015 + RenterOccupiedUnitP_2015 + UnemployementP_2015 + working_class_2015 + SNAP_2015_P +  Hispanic_or_Latino_2015 + NonHispanicBlack_2015 + NonHispanicAsian_2015 + pov_2015 + Crowding_housing_2015 + lang_home_EN_notwell_2015|ClusterAssignment, data= acs15bin, overall = F)
-```
-
-#### Distribution of assignment probabilities to the most probable cluster
-
-```{r}
-boxplot15<-merged15 %>% ggplot(aes(x = as.factor(ClusterAssignment), y = maxProb, fill = as.factor(ClusterAssignment))) +
-  geom_boxplot() +
-  labs(fill = "Cluster Assignment",
-       y = "Assignment Probability after ECR algorithm",
-       x= "")
-
-# boxplot15_new<-merged15 %>% ggplot(aes(x = ClusterAssignment_new, y = probassign, fill = ClusterAssignment_new)) +
-#   geom_boxplot() +
-#   labs(fill = "Cluster Assignment", 
-#        y = "Assignment Probability after ECR algorithm", 
-#        x= "")
-
-dattable15<-merged15 %>% rename(`Average Assignment Probability (ECR Algorithm)` = maxProb,
-                    `Cluster Assignment` = ClusterAssignment) 
-
-table1::table1(~`Average Assignment Probability (ECR Algorithm)` |`Cluster Assignment`, 
-               data= dattable15, overall = F)
+png("/Users/carmenrodriguez/Desktop/Research Projects/BayesBinMix/ecbayesbinmix/Figures/barplot15_18vars.png", width = 780, height = 900)
+p_15_group
+dev.off()
 
 ```
 
 ### **Plots** and Patterns for ACS 2015-2019
 
-```{r}
-#| layout-ncol: 1
-#| fig-width: 10
-#| fig-height: 10
-#| fig-cap: 
-#|   - "Individual Neighborhood SES variables"
-#|   -  "Neighborhood  SES variables Domains"
-mapK<-Mode(res_acs19$K.mcmc)[1]  #tells you mapK
-
-fig_title = ""
-
-dat_19<-preparedat_fig(res_acs19,mapK,sesvars)
-p_19_indiv<-plot_thetakj_indiv(prob_est_long = dat_19, mapK,color_palette = pastel_palette1, fig_title)
-p_19_group<-plot_thetakj_group(prob_est_long = dat_19, mapK,color_palette = group_cols, fig_title)
-p_19_heatmap<-plot_thetakj_heatmap(prob_est_long = dat_19, fig_title)
-p_19_heatmap1<-plot_thetakj_heatmap_r(prob_est_long = dat_19, fig_title)
-#p_19_indiv
-p_19_group
-p_19_heatmap
-p_19_heatmap1
-
-
-
-```
-
 #### **Cluster mixing weights estimates**
 
 ```{r}
+mapK<-Mode(res_acs19$K.mcmc)[1]
 #Class probabilities
 stats<-cbind(summary(res_acs19$parameters.ecr.mcmc)$statistics[,c(1,2)], summary(res_acs19$parameters.ecr.mcmc)$quantiles[,c(1,5)])
 
@@ -365,25 +381,24 @@ table(classificationprobs_19$ClusterAssignment_ecr_temp, classificationprobs_19$
 #7 cts HT1, 15 HT2
 classificationprobs_19%>% filter(ClusterAssignment_ecr_temp != ClusterAssignment) 
 
-
-
-#Prep Data 
 classificationprobs_19$GEOID<-row.names(censusdata_bin$acs5_2019_bin)
 fuzzygeoids_19<-classificationprobs_19%>% filter(ClusterAssignment_ecr_temp != ClusterAssignment) %>% select(GEOID)
 
+classificationprobs_19$ClusterAssignment_final<- 
+  factor(classificationprobs_19$ClusterAssignment_ecr_temp, levels = 1:7, labels = paste0("cluster", 1:7, sep= " "))
 
 
-classificationprobs_19$ClusterAssignment<- 
-  factor(classificationprobs_19$ClusterAssignment, levels = 1:7, labels = paste0("cluster", 1:7, sep= " "))
-
-
-dat19_clusters<- classificationprobs_19 %>% select(GEOID,ClusterAssignment, maxProb)
+dat19_clusters<- classificationprobs_19 %>% select(GEOID,ClusterAssignment_final, maxProb)
 
 
 #merge age dist + race dist with cluster information-- these are proportions
 merged19<- merge(dat19_clusters, agedist19_wide, by = "GEOID")
 
-table1::table1(~  age_median + age_20_24 + age_25_34 + age_35_44 + age_45_54 + age_55_59 + age_60_64 + age_65_74 + age_75_84 + age_85_more|ClusterAssignment, data= merged19, overall = F)
+table1::table1(~  age_median + age_20_24 + age_25_34 + age_35_44 + age_45_54 + age_55_59 + age_60_64 + age_65_74 + age_75_84 + age_85_more|ClusterAssignment_final, data= merged19, overall = F)
+
+acs19 <- acs5_2019_wide  %>% select( !c( "Femalehousehold_2019_E","SNAP_2019_E","Two_or_more_rooms_2019_E",  paste0("ms", 1:8), "ms10", "ms_to", paste0("wc", 1:14), "wc_to",
+ "pov_to", paste0("pov", 2:5), "white_collar_occupation_2019", "HouseIncBlowPovLineP_2019", "Lessthan2rooms_2019_E", "Two_or_more_rooms_2019_P", "Total_housing_2019",    "NH_some_other_race_2019", "NH_two_or_more_races_2019",  "NonHispanicWhite_2019" ,  "minoritystatus_2019" ))
+acs19$ClusterAssignment<-merged19$ClusterAssignment_final
 
 
 #Distrubution of SES variables by cluster
@@ -393,8 +408,7 @@ acs19bin<- acs19bin %>% mutate_if(is.numeric, as.factor)
 acs19bin$ClusterAssignment<-merged19$ClusterAssignment
 
 
-
-table1(~ Two_or_more_rooms_2019_P + Lackplumbing_2019 + medianincome_2019 + BachelorHigherP_2019 + BelowPovertyLineP_2019 +  Education9years_2019 +     Femalehousehold_2019_P + HighSchoolHigherP_2019 + No_vehicle_2019 +        OwnerOccupiedUnitP_2019 + RenterOccupiedUnitP_2019 + UnemployementP_2019 + white_collar_occupation_2019 + SNAP_2019_P |ClusterAssignment, data= acs19bin, overall = F)
+table1(~ Lackplumbing_2019 + medianincome_2019 + BachelorHigherP_2019  +  Education9years_2019 +  Femalehousehold_2019_P + HighSchoolHigherP_2019 + No_vehicle_2019 + OwnerOccupiedUnitP_2019 + RenterOccupiedUnitP_2019 + UnemployementP_2019 + working_class_2019 + SNAP_2019_P +  Hispanic_or_Latino_2019 + NonHispanicBlack_2019 + NonHispanicAsian_2019 + pov_2019 + Crowding_housing_2019 + lang_home_EN_notwell_2019 |ClusterAssignment, data= acs19, overall = F)
 
 
 
@@ -403,17 +417,51 @@ table1(~ Two_or_more_rooms_2019_P + Lackplumbing_2019 + medianincome_2019 + Bach
 #### Distribution of assignment probabilities to the most probable cluster
 
 ```{r}
-boxplot19<-merged19%>%  ggplot(aes(x = ClusterAssignment, y = maxProb, fill = ClusterAssignment)) +
+boxplot19<-merged19%>%  ggplot(aes(x = ClusterAssignment_final, y = maxProb, fill = ClusterAssignment_final)) +
   geom_boxplot() +
   labs(fill = "Cluster Assignment", 
        y = "Assignment Probability after ECR algorithm", 
        x= "")
 
 dattable19<-merged19 %>% rename(`Average Assignment Probability (ECR Algorithm)` = maxProb,
-                    `Cluster Assignment` = ClusterAssignment) 
+                    `Cluster Assignment` = ClusterAssignment_final) 
 
 table1::table1(~`Average Assignment Probability (ECR Algorithm)` |`Cluster Assignment`, 
                data= dattable19, overall = F)
+
+```
+
+#### Generate bar plots
+
+```{r}
+#| layout-ncol: 1
+#| fig-width: 10
+#| fig-height: 10
+#| fig-cap: 
+#|   - "Individual Neighborhood SES variables"
+#|   -  "Neighborhood  SES variables Domains"
+mapK<-Mode(res_acs19$K.mcmc)[1]  #tells you mapK
+
+fig_title = ""
+
+dat_19<-preparedat_fig(res_acs19,mapK,sesvars)
+p_19_indiv<-plot_thetakj_indiv(prob_est_long = dat_19, mapK,color_palette = pastel_palette1, fig_title)
+p_19_group<-plot_thetakj_group(prob_est_long = dat_19, mapK,color_palette = group_cols, fig_title)
+p_19_heatmap<-plot_thetakj_heatmap(prob_est_long = dat_19, fig_title)
+p_19_heatmap1<-plot_thetakj_heatmap_r(prob_est_long = dat_19, fig_title)
+#p_19_indiv
+p_19_group
+p_19_heatmap
+p_19_heatmap1
+
+pdf("/Users/carmenrodriguez/Desktop/Research Projects/BayesBinMix/ecbayesbinmix/Figures/barplot19_18vars.pdf", width = 10, height = 20)
+p_19_group
+dev.off()
+
+
+png("/Users/carmenrodriguez/Desktop/Research Projects/BayesBinMix/ecbayesbinmix/Figures/barplot19_18vars.png", width = 780, height = 900)
+p_19_group
+dev.off()
 
 ```
 
@@ -421,7 +469,7 @@ table1::table1(~`Average Assignment Probability (ECR Algorithm)` |`Cluster Assig
 
 ```{r}
 #We will use 2006-2010 survey as the reference, that is we will compare to this survey
-table(acs10 = merged10$ClusterAssignment, acs15 = merged15$ClusterAssignment_new)
+table(acs10 = merged10$ClusterAssignment_final, acs15 = merged15$ClusterAssignment_final)
 
 #Relabel clusters in acs15 based on qualitative descriptions
 merged15$clustersnum<- as.numeric(merged15$ClusterAssignment_new)
@@ -609,5 +657,9 @@ table(dat19$ClusterAssignment)
 ```{r}
 #save data
 save(dat10, dat15, dat19, file = "/Users/carmenrodriguez/Desktop/Research Projects/BayesBinMix/ecbayesbinmix/bayesbinmix_clustered_tracts.RData")
+
+
+#Export 2010 only
+dat10_export<- merged10 %>% select("GEOID","ClusterAssignment_final")
 
 ```
